--- a/app/src/main/res/layout/reward_rec.xml
+++ b/app/src/main/res/layout/reward_rec.xml
@@ -3,16 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="5dp">
 
     <ImageView
         android:id="@+id/img_gift"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
@@ -20,22 +21,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="21dp"
+        android:text="싸이버거 세트"
         android:textColor="@color/black"
-        android:text="이름"
-        android:textSize="30sp"
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/txt_store_name"
         app:layout_constraintStart_toEndOf="@+id/img_gift"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/img_gift" />
 
     <TextView
         android:id="@+id/txt_store_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginEnd="204dp"
         android:text="가게 이름"
+        app:layout_constraintBottom_toTopOf="@+id/txt_price"
         app:layout_constraintStart_toEndOf="@+id/img_gift"
         app:layout_constraintTop_toBottomOf="@+id/txt_name" />
 
@@ -44,11 +44,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="19dp"
-        android:layout_marginBottom="25dp"
         android:text="가격"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/img_gift"
-        app:layout_constraintTop_toBottomOf="@+id/txt_store_name"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_store_name" />
 </androidx.constraintlayout.widget.ConstraintLayout>
