--- a/app/src/main/res/menu/menus.xml
+++ b/app/src/main/res/menu/menus.xml
@@ -7,10 +7,10 @@
         android:title="지도" />
     <item
         android:id="@+id/rewardFragment"
-        android:icon="@drawable/reward"
+        android:icon="@drawable/coin"
         android:title="리워드" />
     <item
-        android:id="@+id/mypageFragment"
+        android:id="@+id/myPageFragment"
         android:icon="@android:drawable/ic_menu_my_calendar"
         android:title="마이페이지" />
 </menu>
