--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -88,7 +88,7 @@
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/history"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
@@ -97,7 +97,7 @@
             android:textSize="24sp" />
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/my_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10px"
@@ -105,7 +105,7 @@
             android:textSize="24sp" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/logout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
