--- a/app/src/main/res/layout/obstacle_dialog.xml
+++ b/app/src/main/res/layout/obstacle_dialog.xml
@@ -12,11 +12,11 @@
     <TextView
         android:id="@+id/confirmTextView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:gravity="center"
         android:minHeight="50dp"
         android:textSize="14sp"
-        tools:text="확인창입니다." />
+        tools:text="장애물을 등록하시겠습니까?" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,18 +25,18 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/noButton"
+            android:id="@+id/btn_cancel"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="7dp"
             android:layout_weight="1"
             android:text="취소"
             android:textSize="14sp" />
 
         <Button
-            android:id="@+id/yesButton"
+            android:id="@+id/btn_confirm"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="확인"
             android:textSize="14sp" />
