--- a/app/src/main/res/layout/reward_rec.xml
+++ b/app/src/main/res/layout/reward_rec.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/img_gift"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="114dp"
+        android:layout_height="119dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,9 +21,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="싸이버거 세트"
+        android:text="싸이버거 세트 감자 튀김"
         android:textColor="@color/black"
-        android:textSize="24sp"
+        android:textSize="18dp"
         app:layout_constraintBottom_toTopOf="@+id/txt_store_name"
         app:layout_constraintStart_toEndOf="@+id/img_gift"
         app:layout_constraintTop_toTopOf="@+id/img_gift" />
@@ -45,7 +45,21 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:text="가격"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/img_gift"
         app:layout_constraintStart_toEndOf="@+id/img_gift"
         app:layout_constraintTop_toBottomOf="@+id/txt_store_name" />
+
+    <TextView
+        android:id="@+id/order"
+        android:layout_width="39dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="56dp"
+        android:text="1"
+        android:textSize="40sp"
+        android:textStyle="bold|italic"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
