--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -7,12 +7,28 @@
     android:orientation="vertical"
     tools:context=".MapFragment">
 
-    <ImageView
-        android:id="@+id/btn_kakao_login"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:src="@drawable/kakaologin" />
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/btn_kakao_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:src="@drawable/kakaologin" />
+
+        <ImageView
+            android:id="@+id/btn_plus"
+            android:layout_width="wrap_content"
+            android:layout_height="54dp"
+            android:layout_margin="10dp"
+            android:src="@drawable/add" />
+
+
+    </LinearLayout>
+
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/map"
@@ -21,9 +37,4 @@
         android:layout_height="match_parent"
         tools:layout="@layout/abc_search_view" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Button" />
 </LinearLayout>
