장애물 등록 / 삭제 개선 및 TTS 추가

--- a/app/src/main/res/layout/activity_obstacle.xml
+++ b/app/src/main/res/layout/activity_obstacle.xml
@@ -12,7 +12,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="간단한 설명"
+        android:text="장애물 대상 입력"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/edit_explain"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,7 +47,7 @@
         android:layout_height="64dp"
         android:ems="10"
         android:inputType="text"
-        android:text="Name"
+        android:hint="장애물"
         app:layout_constraintBottom_toTopOf="@+id/btn_register"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,7 +57,7 @@
         android:id="@+id/btn_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="장애물 등록"
+        android:text="신고"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
